# medisecure

./: .coverage  .pylintrc  README.md  bandit_config.yaml  coverage.xml  docker-compose.yml  hello.py  pyproject.toml  pytest.ini  rapport_bandit.json  requirements.txt
.github/workflows/: main.yaml  run-tests.yaml  run-tests.yml  run-tests_old.txt  setup-database.yaml  setup-environment.yaml  setup-python.yaml  upload-coverage.yaml
api/: main.py
api/handlers/: exception_handlers.py
api/middlewares/: authentication_middleware.py
api/routers/: patient_router.py
application/usecases/: create_patient_folder_usecase.py
appointment_management/application/usecases/: schedule_appointment.py
appointment_management/domain/entities/: appointment.py
appointment_management/domain/exceptions/: not_available_professional_exception.py  outside_opening_hours_exception.py
appointment_management/infrastructure/adapter/: in_memory_appointment_repository.py
domain/entities/: patient.py
domain/exceptions/: missing_guardian_consent_exception.py
domain/ports/: id_generator_protocol.py  patient_repository_protocol.py
domain/services/: patient_service.py
ihm/: main.py
ihm/core/: medisecure_main_window.py
ihm/gui/: base_app.py  create_folder_patient_ui.py  create_folder_patient_window.py  medisecure_gui.py
ihm/tests/: test_create_folder_patient_gui.py  test_gui.py  tests_list.md
shared/container/: container.py
shared/tests/: test_app.py  test_basic_authenticator.py  test_dependency_container.py
tests/: test_create_patient_folder_usecase.py
(+56 files in other folders)
