[project]
name = "medisecure-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "pydantic>=2.10.3",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
]
