[project]
name = "medisecure-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.8.2",
    "cryptography>=44.0.0",
    "dependency-injector>=4.44.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "mypy>=1.14.0",
    "pydantic>=2.10.3",
    "pylint>=3.3.4",
    "pymysql>=1.1.1",
    "pyqt6>=6.8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-qt>=4.4.0",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "safety>=3.2.9",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
